# icons

./: .flake.nix.kate-swp  README.md  flake.nix  pyproject.toml
