[tool.poetry]
name = "agl_icons"

packages = [
    { include = "agl_icons" }
]

version = "0.1.0"
description = ""
authors = ["Thomas J. Lux"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = "^4.10.0.84"
potracer = "^0.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.nixProvided.dependencies]
pillow = "^10.2.0"
#potrace

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
django-server = "agl_monitor_flake.run_gunicorn:main"
